Review changes
Signed-off-by: tvallin <thibault.vallin@oracle.com>